<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PercentageTimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_date">Starting Date:</string>
    <string name="end_date">Ending Date:</string>
    <string name="date">12/02/1994</string>
    <string name="time">6:12 PM</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="start_timer">Start Timer</string>
    <string name="title_activity_timer_display">TimerDisplayActivity</string>
    <string name="percent">92.365%</string>
    <string name="title_activity_timer_menu">TimerMenu</string>
    <string name="timer_name">Name: College Timer</string>

</resources>
