<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textSize="24dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/timer_name"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/name_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="#ff0000"
        android:text="Name is already being used, try again."
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="24dp" />

            <Button
                android:id="@+id/start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="24dp" />

            <Button
                android:id="@+id/start_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/end_date" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="24dp" />

            <Button
                android:id="@+id/end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/end_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="24dp" />

            <Button
                android:id="@+id/end_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/start_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="startTimer"
        android:text="@string/start_timer" />

</LinearLayout>
